--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -171,6 +171,15 @@ main .currentStream {
   .wrapper canvas.xterm-text-layer, .wrapper canvas.xterm-cursor-layer {
     padding: 0.5rem 3rem 1rem 2rem; }
 
+.Filetree-display {
+  background-color: #282a36 !important; }
+  .Filetree-display .ant-tree-switcher {
+    background-color: #282a36 !important; }
+    .Filetree-display .ant-tree-switcher .ant-tree-switcher-line-icon {
+      color: #fff; }
+  .Filetree-display .ant-tree-title {
+    color: #fff; }
+
 html {
   box-sizing: border-box;
   font-size: 16px; }
