--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -324,5 +324,27 @@ code {
               background: rgba(0, 0, 0, 0);
               color: #3a7999;
               box-shadow: inset 0 0 0 3px #3a7999; }
+  .electron .new-stream .header {
+    display: flex;
+    justify-content: center;
+    margin-top: 2em; }
+    .electron .new-stream .header #dashboard-btn {
+      margin: 1em;
+      float: left; }
+    .electron .new-stream .header .logoPlaceholder {
+      width: 50px;
+      height: 50px;
+      background-color: black; }
+  .electron .new-stream .inputs-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column; }
+    .electron .new-stream .inputs-container h1 {
+      justify-content: center; }
+    .electron .new-stream .inputs-container .forms-container form .title-input h3 {
+      justify-content: space-around; }
+    .electron .new-stream .inputs-container .forms-container form .bottom-container {
+      display: inline-flex;
+      justify-content: space-between; }
 
 /*# sourceMappingURL=index.css.map */
