--- a/electronapp/public/styles/css/index.css
+++ b/electronapp/public/styles/css/index.css
@@ -1,99 +1,83 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,800");
 .dashboard {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-.dashboard .header {
-  height: 35%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-.dashboard .header .image-placeholder {
-  width: 50px;
-  height: 50px;
-  margin: 0.5em;
-  background-color: black;
-}
-.dashboard .header .stream-controls {
-  display: flex;
-  justify-content: center;
-  border: 2px solid black;
-  padding: 1em 2em;
-  width: 60%;
-}
-.dashboard .header .stream-controls #instant {
-  margin: 0.5em;
-}
-.dashboard .header .stream-controls #scheduleNew {
-  margin: 0.5em;
+  min-width: 100vw;
 }
 .dashboard .streams {
-  height: 65%;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  padding: 1rem;
 }
 .dashboard .streams .scheduledStreamCard {
-  width: 90%;
-  height: 15%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  border: 2px solid black;
-  margin: 1em 0;
-  align-items: center;
+  border: 1px solid black;
+  background-color: #a7a7a7;
+  border-radius: 10px;
+  box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
+  min-width: 75vw;
+  margin: 2rem 2rem;
+  padding: 1rem;
 }
-.dashboard .streams .scheduledStreamCard .startPlaceholder {
-  width: 50px;
-  height: 50px;
-  background-color: aquamarine;
-}
-.dashboard .streams .scheduledStreamCard p {
-  font-size: 3.5em;
-  height: 20%;
-}
-.dashboard .streams .scheduledStreamCard div {
-  display: inline-flex;
-}
-.dashboard .streams .scheduledStreamCard div .date-time {
+.dashboard .streams .scheduledStreamCard .info-container {
   display: flex;
   flex-direction: column;
 }
-.dashboard .streams .scheduledStreamCard div .date-time #date {
-  font-size: 1em;
-  display: block;
+.dashboard .streams .scheduledStreamCard .info-container .date-time {
+  display: flex;
+  flex-direction: column;
+}
+.dashboard .streams .scheduledStreamCard .info-container .date-time #date, .dashboard .streams .scheduledStreamCard .info-container .date-time #time {
+  font-size: 0.7rem;
+  display: flex;
   margin: 0;
 }
-.dashboard .streams .scheduledStreamCard div .date-time #time {
-  font-size: 1em;
-  display: block;
-  margin: 0;
+.dashboard .streams .scheduledStreamCard p {
+  font-size: 1.5em;
+  height: 20%;
 }
 .dashboard .streams .scheduledStreamCard .controls {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
-.dashboard .streams .scheduledStreamCard .controls #edit-btn {
-  background-color: skyblue;
+.dashboard .streams .scheduledStreamCard .controls #start-btn {
+  background-color: #a3a3a3;
   padding: 3px;
-  font-size: 1em;
+  font-size: 0.7rem;
+  border-radius: 5px;
+}
+.dashboard .streams .scheduledStreamCard .controls #start-btn:hover {
+  background: rgba(0, 0, 0, 0);
+  color: #b8b8b8;
+  box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.3);
+}
+.dashboard .streams .scheduledStreamCard .controls #edit-btn {
+  background-color: #a3a3a3;
+  padding: 3px;
+  font-size: 0.7rem;
+  border-radius: 5px;
 }
 .dashboard .streams .scheduledStreamCard .controls #edit-btn:hover {
   background: rgba(0, 0, 0, 0);
-  color: #3a7999;
-  box-shadow: inset 0 0 0 3px #3a7999;
+  color: #b8b8b8;
+  box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.3);
 }
 .dashboard .streams .scheduledStreamCard .controls #delete-btn {
-  background-color: darkred;
+  background-color: #6b6b6b;
   padding: 3px;
-  font-size: 1em;
+  font-size: 0.7rem;
+  border-radius: 5px;
 }
 .dashboard .streams .scheduledStreamCard .controls #delete-btn:hover {
   background: rgba(0, 0, 0, 0);
-  color: #3a7999;
-  box-shadow: inset 0 0 0 3px #3a7999;
+  color: #b8b8b8;
+  box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
 .new-stream .header {
@@ -104,11 +88,6 @@
 .new-stream .header #dashboard-btn {
   margin: 1em;
   float: left;
-}
-.new-stream .header .logoPlaceholder {
-  width: 50px;
-  height: 50px;
-  background-color: black;
 }
 .new-stream .inputs-container {
   display: flex;
@@ -126,9 +105,6 @@
   justify-content: space-between;
 }
 
-.start-scheduled {
-  height: 100%;
-}
 .start-scheduled .header {
   height: 20%;
   display: flex;
@@ -154,10 +130,79 @@
   font-size: 1em;
 }
 
+.nav-header {
+  display: flex;
+  min-width: 100vw;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  height: 5rem;
+  background-color: #000000;
+}
+.nav-header img.nav-logo {
+  max-height: 3rem;
+  margin: 0.5em 1rem;
+}
+.nav-header .nav-links {
+  display: flex;
+  flex-direction: row;
+}
+
+html {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
 .App {
-  width: 800px;
-  height: 600px;
-  background-color: darkgray;
+  min-width: 100vh;
+  min-height: 100vw;
+  overflow-y: auto;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #202133;
+  color: #FFF;
+}
+.App .electron-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100vw;
+}
+.App .electron-container .nav-container {
+  min-width: 100vw;
+}
+.App .electron-container .view-container {
+  min-width: 100vw;
+}
+
+.btn {
+  background-color: #bbbbbb;
+  color: #4d4d4d;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  border: 1px solid #000;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 0.7rem;
+  margin: 0.5rem 1rem 0.5rem 0rem;
+  max-width: 6rem;
+  min-width: 6rem;
+  max-height: 2rem;
+}
+.btn:hover {
+  background-color: #777;
 }
 
 /*# sourceMappingURL=index.css.map */
