--- a/electronapp/src/styles/css/index.css
+++ b/electronapp/src/styles/css/index.css
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 .dashboard .header {
   height: 35%;
@@ -51,7 +51,6 @@
 }
 .dashboard .streams .scheduledStreamCard p {
   font-size: 1.5em;
-  color: blue;
   height: 20%;
 }
 .dashboard .streams .scheduledStreamCard div {
@@ -155,10 +154,47 @@
   font-size: 1em;
 }
 
+.nav-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  height: 4rem;
+  background-color: #000000;
+}
+.nav-header img.nav-logo {
+  max-height: 3rem;
+  margin: 0.5em 1rem;
+}
+.nav-header .nav-links {
+  display: flex;
+  flex-direction: row;
+}
+.nav-header .nav-links .nav-link {
+  background-color: #bbbbbb;
+  color: #4d4d4d;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  margin: 1rem 2rem 1rem 0rem;
+  min-width: 6rem;
+}
+.nav-header .nav-links .nav-link:hover {
+  background-color: #777;
+}
+
 .App {
-  width: 800px;
-  height: 600px;
+  min-width: 100vh;
+  min-height: 100vw;
   background-color: darkgray;
+}
+.App .electron-container {
+  display: flex;
 }
 
 /*# sourceMappingURL=index.css.map */
