--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -250,7 +250,11 @@
     color: #fff; }
 
 .pageGrid .welcome-message {
-  color: #FFF; }
+  color: #FFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem; }
 .pageGrid .index-view {
   background-color: #777;
   width: 100vw; }
