--- a/client/src/styles/scss/partials/_indexviews.scss
+++ b/client/src/styles/scss/partials/_indexviews.scss
@@ -2,6 +2,10 @@
 
   .welcome-message {
     color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem;
   }
   .index-view {
     background-color: #777;
