--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -128,7 +128,12 @@
       border-radius: 10px;
       box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
       margin: 2rem 0rem;
-      padding: 1rem; }
+      padding: 1rem;
+      overflow: scroll;
+      min-width: 300px; }
+      @media screen and (max-width: 370px) {
+        .streams .link-container .stream-card {
+          min-width: 200px; } }
       .streams .link-container .stream-card:hover {
         opacity: 0.8;
         transform: scale(1.05);
@@ -140,12 +145,18 @@
         min-width: 75vw;
         margin: 2rem 4rem;
         padding: 1rem; }
+        @media screen and (max-width: 450px) {
+          .streams .link-container .stream-card.scheduled {
+            flex-direction: column; } }
       .streams .link-container .stream-card.active-archived {
         display: flex;
         flex-direction: column;
         max-width: 25vw;
         max-height: 25vw;
         padding: 1.5rem; }
+        @media screen and (max-width: 700px) {
+          .streams .link-container .stream-card.active-archived {
+            max-height: none; } }
       .streams .link-container .stream-card .stream-banner {
         display: flex;
         flex-direction: row;
