--- a/client/src/styles/scss/partials/_streamCards.scss
+++ b/client/src/styles/scss/partials/_streamCards.scss
@@ -1,3 +1,5 @@
+$small-break: 370px;
+
 .stream-container {
   display: flex;
   flex-direction: column;
@@ -19,6 +21,7 @@
   .link-container{
     display: flex;
     .stream-card {
+      
       display: flex;
       border: 1px solid rgb(0, 0, 0);
       background-color: rgb(167, 167, 167);
@@ -26,7 +29,13 @@
       box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
       margin: 2rem 0rem;
       padding: 1rem;
+      overflow: scroll;
+      min-width: 300px;
   
+      @media screen and (max-width: $small-break) {
+        min-width: 200px;
+      }
+
       &:hover {
         opacity: 0.8;
         transform: scale(1.05);
@@ -41,6 +50,9 @@
         min-width: 75vw;
         margin: 2rem 4rem;
         padding: 1rem;
+        @media screen and (max-width: 450px) {
+        flex-direction: column; 
+        }
       }
   
       &.active-archived {
@@ -49,6 +61,9 @@
         max-width: 25vw;
         max-height:25vw;
         padding:1.5rem;
+        @media screen and (max-width: 700px) {
+          max-height: none;
+        }
       }
       
       .stream-banner {
