--- a/electronapp/public/styles/css/index.css
+++ b/electronapp/public/styles/css/index.css
@@ -11,6 +11,11 @@
   flex-direction: column;
   align-items: center;
 }
+.dashboard .streams .info {
+  text-align: center;
+  line-height: 1rem;
+  padding: 0rem 2rem;
+}
 .dashboard .streams .imageHeader {
   width: 50px;
   height: 50px;
@@ -182,7 +187,7 @@
   min-width: 100vw;
   max-width: 100vw;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: center;
   height: 5rem;
   background-color: #000000;
@@ -191,15 +196,11 @@
   max-height: 3rem;
   margin: 0.5em;
 }
-.nav-container .nav-header .nav-links {
-  display: flex;
-  flex-direction: row;
-  margin-right: 3rem;
-}
-.nav-container .nav-header .nav-links .btn.nav-link {
+.nav-container .nav-header .btn.nav-link {
   font-size: 0.7rem;
   color: #000;
-  max-width: 5rem;
+  max-width: 7rem;
+  justify-content: center;
 }
 
 html {
