--- a/electronapp/src/styles/scss/partials/_electronDashboard.scss
+++ b/electronapp/src/styles/scss/partials/_electronDashboard.scss
@@ -7,7 +7,13 @@
   .streams {
     display: flex;
     flex-direction: column;
-    align-items: center;     
+    align-items: center;   
+    
+    .info {
+      text-align: center;
+      line-height: 1rem;
+      padding: 0rem 2rem;
+    }
 
     .imageHeader {
       
