--- a/electronapp/src/styles/scss/partials/_nav.scss
+++ b/electronapp/src/styles/scss/partials/_nav.scss
@@ -4,7 +4,7 @@
     min-width: 100vw;
     max-width: 100vw;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
     height: 5rem;
     background-color: #000000;
@@ -13,16 +13,24 @@
       max-height: 3rem;
       margin: 0.5em;
     }
-  
-    .nav-links {
-      display: flex;
-      flex-direction: row;
-      margin-right: 3rem;
-      .btn.nav-link {
-        font-size: 0.7rem;
-        color: #000;
-        max-width: 5rem;
-      }
+
+    .btn.nav-link {
+      font-size: 0.7rem;
+      color: #000;
+      max-width: 7rem;
+      justify-content: center;
     }
+
+    // .nav-links {
+    //   display: flex;
+    //   flex-direction: row;
+    //   margin-right: 3rem;
+    //   .btn.nav-link {
+    //     font-size: 0.7rem;
+    //     color: #000;
+    //     max-width: 5rem;
+    //     justify-content: center;
+    //   }
+    // }
   }
 }
